syntax = "proto3";

package example.v1;

option java_package = "com.example.grpc.v1";
option java_multiple_files = true;

// The greeting service definition
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  
  // Server streaming - sends multiple greetings
  rpc SayHelloStream (HelloRequest) returns (stream HelloReply);
  
  // Client streaming - receives multiple names
  rpc SayHelloToMany (stream HelloRequest) returns (HelloReply);
  
  // Bidirectional streaming
  rpc Chat (stream HelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name
message HelloRequest {
  string name = 1;
  string language = 2;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
  int64 timestamp = 2;
}